--- a/pages/finns_up_charters.html
+++ b/pages/finns_up_charters.html
@@ -306,7 +306,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <i class="fas fa-fish fish-logo"></i>
+            <i class="finnslogo_1.jpeg"></i>
             <div class="logo-text">
                 <div class="logo">Finns Up Charters</div>
                 <div class="location">Wilmington, NC</div>
@@ -320,14 +320,14 @@
                 <a href="contact.html">Contact</a>
             </nav>
             <div class="contact-number">
-                Contact: 123-456-7890
+                Contact: (910) 515-7856
             </div>
         </div>
     </header>
     
     <section class="hero-section">
         <div class="image-section">
-            <img src="Website%20Mood%20Board.png" alt="Charter Fishing" class="hero-image">
+            <img src="liane-lee-ACPsfR_PljE-unsplash.jpg" alt="Charter Fishing" class="hero-image">
             <div class="hero-overlay">
                 <div class="hero-text">
                     <h1>Book a tour with us today</h1>
@@ -376,8 +376,8 @@
     <section class="contact-info">
         <div class="container">
             <div class="contact-details">
-                <p><strong>Phone:</strong> 123-456-7890</p>
-                <p><strong>Location:</strong> Wilmington, NC</p>
+                <p><strong>Phone:</strong> (910) 515-7856</p>
+                <p><strong>Email:</strong> Finnsupcharters@gmail.com</p>
             </div>
         </div>
     </section>
