--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         }
         
         .logo-img {
-            width: 5px;
-            height: 5px;
-            object-fit: contain;
+            width: 30px;
+            height: 30px;
+            object-fit: cover;
         }
         
         .logo-text {
