--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
         .logo-img {
             width: 30px;
             height: 30px;
-            object-fit: cover;
+            max-width: 30px;
+            max-height: 30px;
+            object-fit: contain;
+            flex-shrink: 0;
+            display: block;
         }
         
         .logo-text {
@@ -307,7 +311,7 @@
 <body>
     <header class="header">
         <div class="logo-container">
-            <img src="websiteAssets/finnslogo_1.jpeg"></i>
+            <img src="websiteAssets/finnslogo_1.jpeg" alt="Finns Up Logo" class="logo-img" ></i>
             <div class="logo-text">
                 <div class="logo">Finns Up Charters</div>
                 <div class="location">Wilmington, NC</div>
