--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             position: relative;
             height: 100vh;
             background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
-                        url('https://images.unsplash.com/photo-1544551763-46a013bb70d5?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80') center/cover;
+                        url('boat_hero_image.jpg') center/cover;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -226,15 +226,15 @@
         }
 
         .tours-image {
-            background-image: url('https://images.unsplash.com/photo-1559827260-dc66d52bef19?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80');
+            background-image: url('boat_tours_image.jpg');
         }
 
         .location-image {
-            background-image: url('https://images.unsplash.com/photo-1506905925346-21bda4d32df4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80');
+            background-image: url('location_image.jpg');
         }
 
         .about-image {
-            background-image: url('https://images.unsplash.com/photo-1581833971358-2c8b550f87b3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1000&q=80');
+            background-image: url('beach_image.jpg');
         }
 
         .service-content {
@@ -365,8 +365,8 @@
     <section class="hero-section">
         <header class="header">
             <div class="logo">
-                <span class="logo-line1">Finns Up</span>
-                <span class="logo-line2">Charters</span>
+                <span class="logo-line1">FINNS UP</span>
+                <span class="logo-line2">CHARTERS</span>
             </div>
             <nav class="navigation">
                 <a href="tours.html" class="nav-link">Tours</a>
