--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         .hero-section {
             position: relative;
-            height: 100vh;
+            height: 50vh;
             background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), 
                         url('boat_hero_image.jpg') center/cover;
             display: flex;
@@ -43,7 +43,7 @@
 
         .logo {
             font-family: 'Roboto', sans-serif;
-            font-weight: 300;
+            font-weight: 400;
             font-size: 24px;
             color: white;
             text-align: center;
@@ -72,7 +72,7 @@
             color: white;
             text-decoration: none;
             font-family: 'Roboto', sans-serif;
-            font-weight: 300;
+            font-weight: 400;
             font-size: 16px;
             transition: color 0.3s ease, transform 0.3s ease;
             position: relative;
@@ -105,7 +105,7 @@
 
         .hero-title {
             font-family: 'Roboto', sans-serif;
-            font-weight: 300;
+            font-weight: 400;
             font-size: 4rem;
             margin-bottom: 20px;
             text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -135,7 +135,7 @@
 
         .intro-content {
             font-family: 'Roboto', sans-serif;
-            font-weight: 300;
+            font-weight: 400;
             font-size: 1.2rem;
             line-height: 1.8;
             color: #555;
@@ -185,7 +185,7 @@
 
         .services-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            grid-template-columns: repeat(3, 1fr);
             gap: 40px;
             max-width: 1200px;
             margin: 0 auto;
@@ -317,7 +317,7 @@
             color: #f0f0f0;
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 1024px) {
             .header {
                 padding: 20px 25px;
                 flex-direction: column;
