--- a/contact.html
+++ b/contact.html
@@ -358,7 +358,7 @@
             <div class="info-card">
                 <h3 class="info-title">Call Us</h3>
                 <div class="info-content">
-                    <a href="tel:+19105551234">(910) 555-1234</a>
+                    <a href="tel:+19105551234">(910) 515-7856</a>
                     <p>Available daily from 7:00 AM - 7:00 PM</p>
                 </div>
             </div>
@@ -366,7 +366,7 @@
             <div class="info-card">
                 <h3 class="info-title">Email Us</h3>
                 <div class="info-content">
-                    <a href="mailto:info@finnsupcharters.com">info@finnsupcharters.com</a>
+                    <a href="mailto:info@finnsupcharters.com">Finnsupcharters@gmail.com</a>
                     <p>We typically respond within 24 hours</p>
                 </div>
             </div>
@@ -383,14 +383,14 @@
                 <div class="bottom-contact-item">
                     <div class="bottom-contact-label">Phone</div>
                     <div class="bottom-contact-info">
-                        <a href="tel:+19105551234">(910) 555-1234</a>
+                        <a href="tel:+19105551234">(910) 515-7856</a>
                     </div>
                 </div>
 
                 <div class="bottom-contact-item">
                     <div class="bottom-contact-label">Email</div>
                     <div class="bottom-contact-info">
-                        <a href="mailto:info@finnsupcharters.com">info@finnsupcharters.com</a>
+                        <a href="mailto:info@finnsupcharters.com">Finnsupcharters@gmail.com</a>
                     </div>
                 </div>
             </div>
