--- a/tours.html
+++ b/tours.html
@@ -154,15 +154,15 @@
         }
 
         .beach-tours {
-            background-image: url('images/beach-tours.jpg');
+            background-image: url('beach_tours_image.jpg');
         }
 
         .fishing-trips {
-            background-image: url('images/fishing-trips.jpg');
+            background-image: url('fishing_image.jpg');
         }
 
         .river-cruises {
-            background-image: url('images/river-cruises.jpg');
+            background-image: url('tours_image.jpg');
         }
 
         .tour-content {
@@ -346,14 +346,14 @@
                 <div class="contact-item">
                     <div class="contact-label">Phone</div>
                     <div class="contact-info">
-                        <a href="tel:+19105551234">(910) 555-1234</a>
+                        <a href="tel:+19105551234">(910) 515-7856</a>
                     </div>
                 </div>
 
                 <div class="contact-item">
                     <div class="contact-label">Email</div>
                     <div class="contact-info">
-                        <a href="mailto:info@finnsupcharters.com">info@finnsupcharters.com</a>
+                        <a href="mailto:info@finnsupcharters.com">Finnsupcharters@gmail.com</a>
                     </div>
                 </div>
             </div>
