--- a/tours.html
+++ b/tours.html
@@ -154,7 +154,7 @@
         }
 
         .beach-tours {
-            background-image: url('beach_tours_image.jpg');
+            background-image: url('beach_tour_image.jpg');
         }
 
         .fishing-trips {
