--- a/location.html
+++ b/location.html
@@ -124,7 +124,8 @@
 
         .image-container {
             width: 100%;
-            height: 350px;
+            height: 250px;
+            max-width: 600px;
             border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
