--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         .service-image {
             width: 100%;
-            height: 220px;
+            height: 250px;
             background-size: cover;
             background-position: center;
             position: relative;
@@ -397,6 +397,8 @@
                 </p>
             </div>
         </div>
+    </section>
+
     <section class="services-section">
         <div class="container">
             <div class="services-grid">
@@ -440,14 +442,14 @@
                 <div class="contact-item">
                     <div class="contact-label">Phone</div>
                     <div class="contact-info">
-                        <a href="tel:+19105551234">(910) 515-7856</a>
+                        <a href="tel:+19105157856">(910) 515-7856</a>
                     </div>
                 </div>
 
                 <div class="contact-item">
                     <div class="contact-label">Email</div>
                     <div class="contact-info">
-                        <a href="mailto:info@finnsupcharters.com">Finnsupcharters@gmail.com</a>
+                        <a href="mailto:finnsupcharters@gmail.com">Finnsupcharters@gmail.com</a>
                     </div>
                 </div>
             </div>
