--- a/location.html
+++ b/location.html
@@ -135,7 +135,7 @@
         .location-image {
             width: 100%;
             height: 100%;
-            background-image: url('boat_image.jpg');
+            background-image: url('wilmington_image.png');
             background-size: cover;
             background-position: center;
         }
