--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 40px;
-            max-width: 1200px;
+            max-width: 1600px;
             margin: 0 auto;
+            padding: 0 20px; 
         }
 
         .service-card {
